[package]
name = "log_jni_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ['cdylib']

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = false
debug = false

[dependencies]
jni = "0.21.1"
log = "0.4.22"
fern = "0.7.0"
chrono = "0.4.38"
aes-gcm = "0.10.3"
md-5 = "0.10.6"
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }